--- a/android/res/layout/item_rating.xml
+++ b/android/res/layout/item_rating.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/margin_placepage_rating"
-        android:paddingBottom="@dimen/margin_base"
-        android:paddingLeft="@dimen/margin_base"
-        android:paddingRight="@dimen/margin_base"
-        android:background="@color/bg_placepage_rating">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:paddingTop="@dimen/placepage_margin_rating"
+  android:paddingBottom="@dimen/margin_base"
+  android:paddingLeft="@dimen/margin_base"
+  android:paddingRight="@dimen/margin_base"
+  android:background="?ppRatingBackground">
 
   <TextView
-          android:id="@+id/tv__place_hotel_rating"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textAppearance="@style/MwmTextAppearance.Body1"
-          android:textColor="@color/text_placepage_rating"
-          tools:text="Rating: 8.7 (Excellent)"/>
+    android:id="@+id/tv__place_hotel_rating"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textAppearance="@style/MwmTextAppearance.Body1"
+    android:textColor="?ppRatingText"
+    tools:text="Rating: 8.7 (Excellent)"/>
 
   <TextView
           android:id="@+id/tv__place_hotel_rating_base"
