--- a/android/res/layout-w600dp-port/place_page_details.xml
+++ b/android/res/layout-w600dp-port/place_page_details.xml
@@ -92,6 +92,9 @@
 
           <include layout="@layout/place_page_hotel_rating"/>
 
+          <!--TODO: remove this after booking_api.cpp will be done-->
+          <include layout="@layout/place_page_more"/>
+
         </LinearLayout>
       </RelativeLayout>
 
