[android] Implemented Uber feature
1. Made a Uber panel layout
2. Implemented the 'Order' button allowing to order the Uber by launching the Uber app or directing to the Google Play

--- a/android/res/layout/menu_route_plan_line.xml
+++ b/android/res/layout/menu_route_plan_line.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-  <include layout="@layout/altitude_chart_panel"/>
+  <include layout="@layout/altitude_chart_panel"
+           tools:visibility="gone"/>
+
+  <include layout="@layout/uber_panel"/>
 
   <include layout="@layout/start_button"/>
 </LinearLayout>
