--- a/android/res/layout/routing_plan.xml
+++ b/android/res/layout/routing_plan.xml
@@ -73,8 +73,16 @@
               style="@style/MwmWidget.ProgressWheel.RoutingPlan"
               android:layout_marginTop="@dimen/routing_selector_wheel_margin"
               android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
-              android:layout_marginRight="@dimen/routing_selector_wheel_margin"
+              android:layout_marginRight="12dp"
               tools:visibility="visible" />
+
+          <com.mapswithme.maps.widget.WheelProgressView
+            android:id="@+id/progress_taxi"
+            style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+            android:layout_marginTop="@dimen/routing_selector_wheel_margin"
+            android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
+            android:layout_marginRight="@dimen/routing_selector_wheel_margin"
+            tools:visibility="visible" />
 
         </LinearLayout>
 
@@ -106,8 +114,16 @@
               android:id="@+id/pedestrian"
               android:layout_width="@dimen/routing_selector_size"
               android:layout_height="@dimen/routing_selector_size"
+              android:layout_marginRight="@dimen/routing_selector_wheel_margin"
               tools:button="@drawable/ic_walk"
               tools:buttonTint="?iconTintLight" />
+
+          <RadioButton
+            android:id="@+id/taxi"
+            android:layout_width="@dimen/routing_selector_size"
+            android:layout_height="@dimen/routing_selector_size"
+            tools:button="@drawable/ic_route_type_taxi"
+            tools:buttonTint="?iconTintLight" />
         </RadioGroup>
 
         <ImageView
