[android] Added 'Taxi not found' panel Removed the onRouteBuilt method from the container interface, because it's redundand Refactored the RoutingPlanController class

--- a/android/res/layout/menu_route_plan_line.xml
+++ b/android/res/layout/menu_route_plan_line.xml
@@ -12,4 +12,17 @@
   <include layout="@layout/uber_panel"/>
 
   <include layout="@layout/start_button"/>
+
+  <TextView
+    android:id="@+id/error"
+    android:paddingLeft="@dimen/margin_base"
+    android:paddingStart="@dimen/margin_base"
+    android:paddingRight="@dimen/margin_base"
+    android:paddingEnd="@dimen/margin_base"
+    android:paddingTop="@dimen/margin_half_plus"
+    android:paddingBottom="@dimen/margin_half_plus"
+    android:textAppearance="@style/MwmTextAppearance.Body3"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:visibility="gone"/>
 </LinearLayout>
