--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -59,6 +59,8 @@
     <item name="redButtonTextColor">@color/button_red_text</item>
     <item name="redButtonTextColorDisabled">@color/button_red_text_disabled</item>
 
+    <item name="startButtonBackground">@drawable/button_start</item>
+
     <item name="circleAccent">@drawable/circle_accent</item>
 
     <item name="menuBackground">@color/bg_menu</item>
@@ -140,6 +142,8 @@
     <item name="redButtonBackground">@drawable/button_red</item>
     <item name="redButtonTextColor">@color/button_red_text</item>
     <item name="redButtonTextColorDisabled">@color/button_red_text_disabled</item>
+
+    <item name="startButtonBackground">@drawable/button_start_night</item>
 
     <item name="circleAccent">@drawable/circle_accent_night</item>
 
