--- a/iphone/Maps/Classes/MWMBookmarkCell.xib
+++ b/iphone/Maps/Classes/MWMBookmarkCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -109,7 +109,7 @@
                     <constraint firstItem="ZiC-VG-fs0" firstAttribute="top" secondItem="Fsd-1g-BiQ" secondAttribute="bottom" priority="750" id="ljR-q8-Ogv"/>
                     <constraint firstItem="ZiC-VG-fs0" firstAttribute="leading" secondItem="wdW-iu-3p9" secondAttribute="leading" id="o7K-ik-8fC"/>
                     <constraint firstAttribute="trailing" secondItem="ZHb-qS-nFh" secondAttribute="trailing" id="s0h-Qw-irP"/>
-                    <constraint firstItem="nxK-lC-JqY" firstAttribute="bottom" secondItem="Fsd-1g-BiQ" secondAttribute="bottom" id="vF4-nA-hcQ"/>
+                    <constraint firstItem="nxK-lC-JqY" firstAttribute="bottom" secondItem="Fsd-1g-BiQ" secondAttribute="bottom" priority="750" id="vF4-nA-hcQ"/>
                     <constraint firstAttribute="trailing" secondItem="fKp-HW-1bX" secondAttribute="trailing" id="x31-Te-nkc"/>
                     <constraint firstItem="fKp-HW-1bX" firstAttribute="leading" secondItem="wdW-iu-3p9" secondAttribute="leading" id="xUk-eO-3jw"/>
                 </constraints>
